Fixing background image zoom-in on smaller devices

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -144,15 +144,7 @@ ion-icon{
 @media all and (max-width:985px){
 
 
-  html {
-    background: url(../images/bg6.jpeg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    height: auto;
-    overflow: hidden;
-}
+
 
   .container-fluid {
     padding-right:0;
